tests/typechecker/pass/021-fn-subtyping-example.hyg
type MyInt = int;

// ==== Example 41 ====

fun f(x: MyInt): MyInt = x + 1;

let fAlias: (int) -> int = f;

assert(fAlias(42) = f(42))

// ====================
