tests/typechecker/fail/023-ret-lec-var.hyg
let rec f: (int, int) -> int = f;
()
